Fix scaleX squishing news/event links on tablets

--- a/css/style.css
+++ b/css/style.css
@@ -6990,7 +6990,7 @@ body {
     display: block; }
     #homephotomobile a:hover, #homephotomobile a:focus {
       text-decoration: none;
-      transform: scaleX(1.1); }
+      transform: scale(1.1); }
 
 @media (min-width: 992px) {
   .agenda-posts .card {
