--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -336,7 +336,7 @@ body {
     &:hover,
     &:focus {
       text-decoration: none;
-      transform: scaleX(1.1);
+      transform: scale(1.1);
     }
   }
 }
